--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,6 @@
 {
   "hosting": {
-    "site": "a1p1shhhhhhhh",
+    "site": "a1p2bdbhebed",
     "public": "public",
     "ignore": [
       "firebase.json",
