--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,6 @@
 {
   "hosting":{ 
-    "site": "a1p2bdbhebed",
+    "site": "a0wa1finalrohith",
     "public": "public",
     "ignore": [
       "firebase.json",
